Minor bug fixes such as not showing the name on the homepage after sign in, plus changing button positions on new, finishe homepage

--- a/modulesApplication/static/modulesApplication/css/main/home.css
+++ b/modulesApplication/static/modulesApplication/css/main/home.css
@@ -8,7 +8,7 @@
 }
 
 .main-content {
-    background: rgba(255,135,0,0.3);
+    background: rgba(255, 135, 0, 0.3);
     width: 100%;
     left: 0;
     margin: -200px 0 0 0;
@@ -30,6 +30,8 @@
     }
 }
 
-.to-middle {
-
+.in-middle {
+    display: block;
+    margin: auto;
+    width: 300px;
 }
